using drivers (with path)

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,8 +3,12 @@ markers =
     test_scenario_task: my scenario from test task
 
 python_classes = *Test Test* *Suite
-;testpaths = TestPage
-;addopts = -rsxX -l --tb=short --strict
-;miniversion = 3.0
-;norecursedirs = .* venv src *. dist build
-;xfail_strict = true
+testpaths = TestPage
+addopts = -rsxX -l --tb=short --strict
+miniversion = 3.0
+norecursedirs = .* venv src *. dist build
+xfail_strict = true
+environment_table_redact_list = ^foo$
+    .*redact.*
+    bar
+render_collapsed = True
