using drivers (with path)

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,7 +4,7 @@ markers =
 
 python_classes = *Test Test* *Suite
 testpaths = TestPage
-addopts = -rsxX -l --tb=short --strict
+addopts = -rsxX -l --tb=short --strict --html=report.html --browser=Chrome
 miniversion = 3.0
 norecursedirs = .* venv src *. dist build
 xfail_strict = true
@@ -12,3 +12,7 @@ environment_table_redact_list = ^foo$
     .*redact.*
     bar
 render_collapsed = True
+filterwarnings =
+    error
+    ignore::UserWarning
+    ignore:function ham\(\) is deprecated:DeprecationWarning
